<?xml version="1.0"?>
<package>
  <name>youbot_arm_kinematics_plugin</name>
  <version>0.0.1</version>
  <description>A 5DoF IK solve plugin for moveit</description>
  
  <author email="arne.hitzmann@ostfalia.de">Arne Hitzmann</author>
  <maintainer email="nss.nikolas@gmail.com">Nikolas Semenov</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>moveit_core</run_depend>

  <export>
    <moveit_core plugin="${prefix}/youbot_arm_kinematics_plugins.xml" />
  </export>
</package>
